# docsage

./: .env.example  .gitignore  pyproject.toml
.claude/: settings.local.json
.github/workflows/: eval_ci.yml
eval/: golden_dataset.json  llm_judge.py  ragas_eval.py  run_eval.py
indexes/: bm25.pkl  faiss.index  metadata.jsonl
scripts/: check_threshold.py  convert_aragog.py  debug_rag.py  health_check.py  ingest_docs.py  run_chunking.py  test_ingestion.py  test_rag_e2e.py  test_retrieval.py
src/: config.py
src/context/: citation_builder.py  injection_guard.py  packer.py
src/generation/: llm_client.py  rag_chain.py
src/indexing/: indexer.py
src/ingestion/: chunker.py  loader.py
src/retrieval/: bm25_retriever.py  hybrid.py  models.py  reranker.py  retriever.py  vector_retriever.py
tests/context/: test_citation_builder.py  test_injection_guard.py  test_packer.py
tests/generation/: test_rag_chain.py
tests/indexing/: test_indexer.py
tests/ingestion/: test_chunker.py  test_loader.py
tests/retrieval/: test_hybrid.py
