[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docsage"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.19.0",
    "huggingface-hub>=0.23.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=3.0.0",
    "nltk>=3.8.0",
    "numpy>=1.26.0",
    "faiss-cpu>=1.8.0",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.7.0",
    "litellm>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
